--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         html,body{
             width: 100vw;
             min-height: 100vh;
+            overflow-x: hidden;
             margin:0;
             padding: 0;
             display: flex;
@@ -21,14 +22,18 @@
         }
         .container{
             border-radius: 20px;
-            width: 99vw;
+            width: 90vw;
+            min-height: 98vh;
             background-color: azure;
             align-items: center;
             text-align: left;
-            padding: 20px;
-            margin: 20px;
+            padding: 1vw;
+            margin: 1vw;
+            word-wrap: break-word;
         }
         .container h1{
+            text-decoration: underline;
+            text-align: center;
             font-size: 2em;
             font-weight: bold;
             color: #000;
@@ -39,12 +44,20 @@
             font-size: 1.2em;
             font-weight: bold;
         }
+        footer a{
+            position: absolute;
+            bottom: 0;
+            text-align: center;
+            text-decoration: none;
+            color:rgb(121, 78, 22);
+            font-size: 0.8em;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>
-            List of projects
+            List of Frontend mentor projects
         </h1>
         <ol>
             <li>
@@ -53,6 +66,9 @@
                 </a>
             </li>
         </ol>
+        <footer>
+             <a href="xandersavvy.github.io"> By Souvik Ghosh </a>
+        </footer>
     </div>
 </body>
 </html>
