--- a/index.html
+++ b/index.html
@@ -1,74 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor challenges by souvik Ghosh</title>
     <style>
-        *{
-            box-sizing: border-box;
-        }
-        html,body{
-            width: 100vw;
-            min-height: 100vh;
-            overflow-x: hidden;
-            margin:0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: baseline;
-            background-color: beige;
-        }
-        .container{
-            border-radius: 20px;
-            width: 90vw;
-            min-height: 98vh;
-            background-color: azure;
-            align-items: center;
-            text-align: left;
-            padding: 1vw;
-            margin: 1vw;
-            word-wrap: break-word;
-        }
-        .container h1{
-            text-decoration: underline;
-            text-align: center;
-            font-size: 2em;
-            font-weight: bold;
-            color: #000;
-        }
-        .container ol li a{
-            text-decoration: none;
-            color: rgb(63, 5, 5);
-            font-size: 1.2em;
-            font-weight: bold;
-        }
-        footer a{
-            position: absolute;
-            bottom: 0;
-            text-align: center;
-            text-decoration: none;
-            color:rgb(121, 78, 22);
-            font-size: 0.8em;
-        }
+      * {
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        width: 100vw;
+        min-height: 100vh;
+        overflow-x: hidden;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: baseline;
+        background-color: beige;
+      }
+      .container {
+        border-radius: 20px;
+        width: 90vw;
+        min-height: 98vh;
+        background-color: azure;
+        align-items: center;
+        text-align: left;
+        padding: 1vw;
+        margin: 1vw;
+        word-wrap: break-word;
+      }
+      .container h1 {
+        text-decoration: underline;
+        text-align: center;
+        font-size: 2em;
+        font-weight: bold;
+        color: #000;
+      }
+      .container ol li a {
+        text-decoration: none;
+        color: rgb(63, 5, 5);
+        font-size: 1.2em;
+        font-weight: bold;
+      }
+      footer a {
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+        text-decoration: none;
+        color: rgb(121, 78, 22);
+        font-size: 0.8em;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>
-            List of Frontend mentor projects
-        </h1>
-        <ol>
-            <li>
-                <a href="./order-summary-component-main/index.html">
-                    Order Summary Components - HTML , SCSS
-                </a>
-            </li>
-        </ol>
-        <footer>
-             <a href="xandersavvy.github.io"> By Souvik Ghosh </a>
-        </footer>
+      <h1>List of Frontend mentor projects</h1>
+      <ol>
+        <li>
+          <a href="./order-summary-component-main/index.html">
+            Order Summary Components - HTML , SCSS
+          </a>
+        </li>
+        <li>
+          <a href="./expenses-chart-component/index.html">
+            Expenses Chart Component - HTML , SCSS , JS
+          </a>
+        </li>
+      </ol>
+      <footer>
+        <a href="xandersavvy.github.io"> By Souvik Ghosh </a>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
