--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
             Expenses Chart Component - HTML , SCSS , JS
           </a>
         </li>
+        <li>
+          <a href="./interactive-rating-component/index.html">
+            Interactive rating Component - HTML , SCSS , JS
+          </a>
+        </li>
+        <li>
+          <a href="./advice-generator-app-main/">
+            Advice genrattor app - HTML , SCSS , JS
+          </a>
+        </li>
       </ol>
       <footer>
         <a href="xandersavvy.github.io"> By Souvik Ghosh </a>
